<resources>

    <string name="app_name">Walmart_login_page</string>
    <string name="signin_email">Email address(required)</string>
    <string name="signin_password">Password(required)</string>
    <string name="signin_btn">Sign In</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up">Create a new account</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="signin_title">Sign in to your account</string>
    <string name="dash">dash</string>
    <string name="title">Shop by Category</string>
    <string name="username" />
    <string name="create_account">Create your account</string>
    <string name="first_name">First name*</string>
    <string name="last_name_required">Last name*</string>
    <string name="email_address_required">Email address*</string>
    <string name="password">Password*</string>
    <string name="btn_label_create_account">Create Account</string>
    <string name="activity_login_auto_hint_email">Email</string>
    <string name="activity_login_auto_hint_password">Password</string>
</resources>