<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="30dp"
    android:paddingBottom="30dp"
    tools:ignore="UselessParent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.303"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/walmart_logo"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_top"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_top"
        android:layout_marginBottom="@dimen/margin_top"
        android:fontFamily="sans-serif-medium"
        android:text="@string/create_account"
        android:textAlignment="center"
        android:textSize="24sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        app:cardCornerRadius="7dp"
        app:cardElevation="22dp">

        <LinearLayout
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_top"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginEnd="@dimen/margin_top"
                android:fontFamily="sans-serif-condensed-light"
                android:paddingStart="@dimen/margin_top"
                android:paddingEnd="@dimen/margin_top"
                android:text="@string/first_name"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="@string/activity_login_auto_hint_email"
                android:background="@drawable/curved"
                android:cursorVisible="true"
                android:fontFamily="sans-serif-light"
                android:gravity="center|start|bottom"
                android:inputType="text"
                android:maxLength="50"
                android:minHeight="48dp"
                android:paddingStart="@dimen/margin_top"
                android:paddingTop="@dimen/padding_top"
                android:paddingEnd="@dimen/margin_top"
                android:paddingBottom="@dimen/padding_top"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:hint="@string/first_name"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_top"
                android:layout_marginTop="@dimen/image_margin"
                android:layout_marginEnd="@dimen/margin_top"
                android:fontFamily="sans-serif-condensed-light"
                android:paddingStart="@dimen/margin_top"
                android:paddingEnd="@dimen/margin_top"
                android:text="@string/last_name_required"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="@string/activity_login_auto_hint_email"
                android:background="@drawable/curved"
                android:cursorVisible="true"
                android:fontFamily="sans-serif-light"
                android:gravity="center|start|bottom"
                android:hint="@string/last_name_required"
                android:inputType="text"
                android:maxLength="50"
                android:paddingStart="@dimen/margin_top"
                android:paddingTop="@dimen/padding_top"
                android:paddingEnd="@dimen/margin_top"
                android:paddingBottom="@dimen/padding_top"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_top"
                android:layout_marginTop="@dimen/image_margin"
                android:layout_marginEnd="@dimen/margin_top"
                android:fontFamily="sans-serif-condensed-light"
                android:paddingStart="@dimen/margin_top"
                android:paddingEnd="@dimen/margin_top"
                android:text="@string/email_address_required"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/registration_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="@string/activity_login_auto_hint_email"
                android:background="@drawable/curved"
                android:cursorVisible="true"
                android:fontFamily="sans-serif-light"
                android:gravity="center|start|bottom"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:paddingStart="@dimen/margin_top"
                android:paddingTop="@dimen/padding_top"
                android:paddingEnd="@dimen/margin_top"
                android:paddingBottom="@dimen/padding_top"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:hint="@string/email_address_required"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_top"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginEnd="@dimen/margin_top"
                android:fontFamily="sans-serif-condensed-light"
                android:paddingStart="@dimen/margin_top"
                android:paddingEnd="@dimen/margin_top"
                android:text="@string/password"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="@string/activity_login_auto_hint_password"
                android:background="@drawable/curved"
                android:cursorVisible="true"
                android:gravity="center|start|bottom"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="50"
                android:paddingStart="@dimen/margin_top"
                android:paddingTop="@dimen/padding_top"
                android:paddingEnd="@dimen/margin_top"
                android:paddingBottom="@dimen/padding_top"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/btn_curved"
                android:text="@string/btn_label_create_account"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textSize="18sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
